[package]
name = "bevy_vulkan"
version = "0.5.0"
authors = ["goncalofds <goncalofds@gmail.com>"]
edition = "2018"

[features]
default = ["bevy_winit"]

[dependencies]
#bevy
bevy_app = { path = "../bevy_app", version = "0.5.0" }
bevy_asset = { path = "../bevy_asset", version = "0.5.0" }
bevy_core = { path = "../bevy_core", version = "0.5.0" }
bevy_diagnostic = { path = "../bevy_diagnostic", version = "0.5.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.5.0" }
bevy_render = { path = "../bevy_render", version = "0.5.0" }
bevy_window = { path = "../bevy_window", version = "0.5.0" }
bevy_winit = { path = "../bevy_winit", optional = true, version = "0.5.0" }
bevy_utils = { path = "../bevy_utils", version = "0.5.0" }

#other
ash = "0.32.1"
ash-window = "0.6"
vk-mem = "0.2.2"
futures-lite = "1.4.0"
crossbeam-channel = "0.4.4"
crossbeam-utils = "0.7.2"
parking_lot = "0.11.0"
